# deep-obsidian-mcp

./: .gitignore  CHANGELOG.md  CONFIGURATION.md  Cargo.toml  INSTALL.md  README.md  USAGE.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish-apt-pages.yml  release-deb.yml
Formula/: deep-obsidian-mcp.rb
docs/: FIX_EMBEDDING_CONTEXT_CRASH.md  README.md  agent-workflows.md  architecture.md  behavior-contract.md  brew-service-refactor-plan.md  brew-service-refactor-status.md  debian-package.md  homebrew-gap-todo.md  homebrew-service.md  mcp-reference.md  release-checklist.md  retrieval-eval.md  rust-migration-checklist.md  rust-prototype.md  writing-conventions-pattern.md
obsidian-snippets/: hide-agent-wiki-folders.css
packaging/systemd/: deep-obsidian-mcp.service
rust/: Cargo.toml
rust/crates/deep-obsidian-cli/: Cargo.toml
rust/crates/deep-obsidian-cli/src/: cli.rs  commands.rs  config.rs  lib.rs  main.rs
rust/crates/deep-obsidian-config/: Cargo.toml
rust/crates/deep-obsidian-config/src/: lib.rs  secrets.rs
rust/crates/deep-obsidian-core/: Cargo.toml
rust/crates/deep-obsidian-core/src/: lib.rs  text.rs  vault.rs
rust/crates/deep-obsidian-index/: Cargo.toml
rust/crates/deep-obsidian-index/src/: embeddings.rs  graph.rs  index.rs  lib.rs  reindex.rs  search.rs  sqlite.rs
rust/crates/deep-obsidian-index/tests/: retrieval_eval.rs
rust/crates/deep-obsidian-server/: Cargo.toml
rust/crates/deep-obsidian-server/src/: auth.rs  bootstrap.rs  compat.rs  config.rs  health.rs  lib.rs  main.rs  mcp.rs  prompts.rs  protocol.rs  resources.rs  runtime.rs  stdio.rs  tools.rs  uploads.rs  vault.rs
rust/crates/deep-obsidian-types/: Cargo.toml
rust/crates/deep-obsidian-types/src/: lib.rs
scripts/: build-apt-repo.sh  build-deb.sh  install-launchd-service.sh  linux-smoke-test.sh  probe_http_service.mjs  probe_vault_info.mjs  run-http-service.sh  run-linux-integration-docker.sh  uninstall-launchd-service.sh  verify-config-contract.mjs  verify-fixture-vault.mjs  verify-rust-prototype.mjs  verify-service-http.mjs  verify-service-launch.mjs
skills/obsidian-capture-session/: SKILL.md
skills/obsidian-knowledge-maintenance/: SKILL.md
skills/obsidian-wiki-init/: SKILL.md
src/: cli.ts  config.ts  embeddings.ts  index.ts  indexer.ts  search.ts  server.ts  service.ts  text.ts  transport.ts  types.ts  vault.ts
src/commands/: doctor.ts  index.ts  print-config.ts  probe.ts  setup-service.ts  shared.ts
tests/fixtures/behavior/: config-resolution-cases.json
tests/fixtures/vault/: Home.md
tests/fixtures/vault/Projects/: Brew Service.md
tests/fixtures/vault/Research/: Service Contract.md
