[workspace]
resolver = "2"
members = [
  "rust/crates/deep-obsidian-core",
  "rust/crates/deep-obsidian-cli",
  "rust/crates/deep-obsidian-config",
  "rust/crates/deep-obsidian-index",
  "rust/crates/deep-obsidian-server",
  "rust/crates/deep-obsidian-types",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
notify = "6"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2"
