[package]
name = "deep-obsidian-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
name = "deep_obsidian_cli"
path = "src/lib.rs"

[[bin]]
name = "deep-obsidian-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
deep-obsidian-config = { path = "../deep-obsidian-config" }
deep-obsidian-server = { path = "../deep-obsidian-server" }
deep-obsidian-types = { path = "../deep-obsidian-types" }
reqwest.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
