[package]
name = "deep-obsidian-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chacha20poly1305.workspace = true
deep-obsidian-types = { path = "../deep-obsidian-types" }
keyring.workspace = true
rand.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
zeroize.workspace = true
