[package]
name = "deep-obsidian-index"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock"] }
deep-obsidian-core = { path = "../deep-obsidian-core" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
sqlite-vec = { path = "../../vendor/sqlite-vec" }
thiserror.workspace = true
tracing.workspace = true
