[package]
name = "deep-obsidian-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
deep-obsidian-config = { path = "../deep-obsidian-config" }
deep-obsidian-types = { path = "../deep-obsidian-types" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
