[package]
name = "deep-obsidian-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
clap.workspace = true
deep-obsidian-config = { path = "../deep-obsidian-config" }
deep-obsidian-core = { path = "../deep-obsidian-core" }
deep-obsidian-index = { path = "../deep-obsidian-index" }
deep-obsidian-types = { path = "../deep-obsidian-types" }
futures-util.workspace = true
notify.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true
